--- a/ele-vue-learning/src/renderer/assets/common/common.scss
+++ b/ele-vue-learning/src/renderer/assets/common/common.scss
@@ -55,6 +55,24 @@ table { border-collapse: collapse; border-spacing: 0; }
 .ks-clear, .clear {
   *zoom: 1;
 }
+
+
+.custom-scrollbar {
+  overflow-y:scroll;
+}
+/* To style the document scrollbar, remove `.custom-scrollbar` */
+.custom-scrollbar::-webkit-scrollbar {
+  width: 8px;
+}
+.custom-scrollbar::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px #757474;
+  border-radius: 10px;
+}
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  box-shadow: inset 0 0 6px #757474;
+}
+
 $back:#f5f5f7;
 $red: #c62f2f;
 $gray:#e6e7ea;
