发现音乐页banner轮播图、及其子页个性推荐页完成

--- a/src/renderer/assets/common/common.scss
+++ b/src/renderer/assets/common/common.scss
@@ -55,7 +55,9 @@ table { border-collapse: collapse; border-spacing: 0; }
 .ks-clear, .clear {
   *zoom: 1;
 }
-
+div {
+  user-select: none;
+}
 
 .custom-scrollbar {
   overflow-y:scroll;
